added address table view

--- a/src/main/webapp/add/index.xhtml
+++ b/src/main/webapp/add/index.xhtml
@@ -35,6 +35,7 @@
       <h:inputText value="#{addAddressFormBean.address.zipCode}"/>
     </p>
     <p>
+      <a href="..">Cancel</a>
       <h:commandButton action="#{addAddressFormBean.save}"
           value="Save"/>
     </p>    
