--- a/src/main/webapp/index.xhtml
+++ b/src/main/webapp/index.xhtml
@@ -4,11 +4,50 @@
   xmlns:h="http://xmlns.jcp.org/jsf/html">
 
 <h:head>
-  <title>Core JSF Example</title>
+  <title>Address Book</title>
 </h:head>
 
 <h:body>
-  <p>Core JSF Example</p>
+  <h1>Address Book</h1>
+  
+  <p>
+    <a href="#{request.contextPath}/add/">Add Address</a>    
+  </p>
+  
+  <h:dataTable var="address" value="#{addressTableBean.addresses}">
+  
+    <h:column>
+      <f:facet name="header">Last Name</f:facet>
+      #{address.lastName}
+    </h:column>
+
+    <h:column>
+      <f:facet name="header">First Name</f:facet>
+      #{address.firstName}
+    </h:column>
+
+    <h:column>
+      <f:facet name="header">Street Address</f:facet>
+      #{address.streetAddress}
+    </h:column>
+
+    <h:column>
+      <f:facet name="header">City</f:facet>
+      #{address.city}
+    </h:column>
+
+    <h:column>
+      <f:facet name="header">State</f:facet>
+      #{address.state}
+    </h:column>
+  
+      <h:column>
+      <f:facet name="header">Zip Code</f:facet>
+      #{address.zipCode}
+    </h:column>
+  
+  </h:dataTable>
+  
 </h:body>
 
 </html>
